v3 UI: fixed fractional padding in input causing borders to be cut off.

--- a/tool-ui/src/main/webapp/style/v3/abstract.less
+++ b/tool-ui/src/main/webapp/style/v3/abstract.less
@@ -481,16 +481,18 @@ figure,
 .icon-user-md { &:before { content: '\f200'; } }
 
 .inputLike {
-  @size-border: 1px;
+  @-borderWidth: 1px;
+  @-paddingTB: @length-inputHeight - @length-lineHeight - (@-borderWidth * 2);
+  @-paddingTop: floor(@-paddingTB / 2);
 
   .background-flat(white);
   border-color: @color-border;
   border-radius: 2px;
   border-style: solid;
-  border-width: @size-border;
+  border-width: @-borderWidth;
   box-sizing: border-box;
   min-height: @length-inputHeight;
-  padding: ((@length-inputHeight - @length-lineHeight) / 2 - @size-border) 6px;
+  padding: @-paddingTop 6px (@-paddingTB - @-paddingTop) 6px;
   transition: border-color @time-fast, box-shadow @time-fast;
 
   &:hover,
